--- a/rssd/Makefile.am
+++ b/rssd/Makefile.am
@@ -1,7 +1,7 @@
 bin_PROGRAMS = rssd
 rssd_SOURCES = main.cpp update.cpp
 rssd_CPPFLAGS = -I/usr/local/include
-rssd_LDFLAGS = -L/usr/local/lib -lPocoXML -lPocoNet -lPocoUtil -lPocoFoundation
+rssd_LDFLAGS = -L/usr/local/lib -lPocoXML -lPocoNet -lPocoUtil -lPocoFoundation -lhiredis
 #rssd_LDADD = libPocoXML.a
 
 
